--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,11 @@
 {
   "hosting": {
+    "site": "portafolio-ardudev-99aa2",
     "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   }
 }
